--- a/src/pages/portal/ingresar.astro
+++ b/src/pages/portal/ingresar.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
+import portalIngresarScript from '../../scripts/portal-ingresar.js';
 const cspNonce = Astro.locals?.cspNonce;
 ---
 
@@ -129,7 +130,7 @@ const cspNonce = Astro.locals?.cspNonce;
 
   <script
     type="module"
-    src={Astro.resolve('../../scripts/portal-ingresar.js')}
+    src={portalIngresarScript}
     nonce={cspNonce}
   ></script>
 </BaseLayout>
