--- a/src/pages/portal/ingresar.astro
+++ b/src/pages/portal/ingresar.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import portalIngresarScript from '../../scripts/portal-ingresar.js';
+const portalIngresarScript = Astro.resolve('../../scripts/portal-ingresar.js');
 const cspNonce = Astro.locals?.cspNonce;
 ---
 
