--- a/src/components/ChurchesMap.astro
+++ b/src/components/ChurchesMap.astro
@@ -1,5 +1,7 @@
 ---
 const id = 'churches-map';
+const cspNonce = Astro.locals?.cspNonce;
+const churchesMapScript = Astro.resolve('../scripts/churches-map.js');
 ---
 
 <div
@@ -15,4 +17,4 @@ const id = 'churches-map';
 </noscript>
 
 <!-- Script bundlado por Vite: inicializa Leaflet -->
-<script type="module" src="/src/scripts/churches-map.js"></script>
+<script type="module" src={churchesMapScript} nonce={cspNonce}></script>
